# Krabbi

./: .gitignore  Cargo.toml  README.md  test.db
client/: package-lock.json  tailwind.config.js
client/public/: index.html
client/src/: App.js  index.css
client/src/board/: Board.js
client/src/components/: HowToPlay.js
client/src/util/: boardFromCHFEN.js  vikingNames.js
src/: game.rs  main.rs
src/game/: after_move_eval.rs  ai.rs  board.rs  legal_moves.rs
src/game/after_move_eval/: captures_in_dir.rs  edge_fort.rs  get_shield_wall_captures.rs  surround_win.rs
