[package]
name = "krabbi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web="4"
dotenv = "0.15.0"
rand = "0.8.5"
rusqlite = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
